--- a/angular-frontend/src/styles.css
+++ b/angular-frontend/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Petemoss";
+    src: url("/assets/fonts/Petemoss-Regular.ttf") format("truetype");
+}
