--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -37,3 +37,17 @@ td {
     border: 1px solid grey;
     padding: 3px;
 }
+
+.code-snippet {
+    border: 1px solid #545d68;
+    border-radius: 2px;
+    padding: 3px;
+    margin: 3px;
+    background-color: #545d68;
+    color: #fff;
+}
+
+.note-timestamp {
+    color: #000;
+    font-size: 10px;
+}
