--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -47,7 +47,14 @@ td {
     color: #fff;
 }
 
-.note-timestamp {
-    color: #000;
-    font-size: 10px;
+h5 {
+    font-size: 1.15rem;
+}
+
+small {
+    font-size: .73em;
+}
+
+.btn-sm {
+    --bs-btn-font-size: 0.50rem;
 }
